# competitive-programming

./: CMakeLists.txt
.zed/: tasks.json
canadian-computing-competition/: CMakeLists.txt
canadian-computing-competition/2022/: CMakeLists.txt  s1.cc
canadian-computing-competition/2023/: run.sh  s2  s2.cc
canadian-computing-competition/2024/: CMakeLists.txt  inputs.txt  s3.cc  utils.h
canadian-computing-competition/2025/: CMakeLists.txt
dmoj/: CMakeLists.txt
dmoj/avocadotrees/: inputs.txt  main.cc
dmoj/cadadr/: main.cc
dmoj/dmopc14c2p4/: inputs.txt  main.cc
dmoj/othscc1p4/: inputs.txt  main.cc
dmoj/rgpc18p3/: Makefile  input.txt  unoptimized.cc
dmoj/rimurus-number-game/: bfs.cc  brute-force.cc  dfs.cc
dmoj/seed3/: Makefile  input.txt  main.cc
dmoj/uhscsoneone/: inputs.txt  main.cc
dmoj/uhscsonethree/: main.cc
dmoj/uhscsonetwo/: inputs.txt  main.cc
dmoj/vmss7wc16c2p2/: inputs.txt  main.cc
include/: utils.h
