add_executable(
    cadadr
    cadadr/main.cc
)

add_executable(
    rimurus-number-game-brute-force
    rimurus-number-game/brute-force.cc
)

add_executable(
    rimurus-number-game-bfs
    rimurus-number-game/bfs.cc
)

add_executable(
    rimurus-number-game-dfs
    rimurus-number-game/dfs.cc
)

add_executable(
  uhscsonetwo
  uhscsonetwo/main.cc
)

add_executable(
  dmopc14c2p4
  dmopc14c2p4/main.cc
)

add_executable(
  avocadotrees
  avocadotrees/main.cc
)

add_executable(
  vmss7wc16c2p2
  vmss7wc16c2p2/main.cc
)

add_executable(
  othscc1p4
  othscc1p4/main.cc
)
